Fix: layout broken

--- a/main.css
+++ b/main.css
@@ -4,12 +4,7 @@
   font-family: 'Alegreya', serif;
 }
 
-.char-sheet {
-  box-sizing:border-box;
-
-  width: 8.3in;
-  height: 11.5in;
-
-  margin-top: 0.5cm;
-  page-break-after: always;
+body {
+  padding: 0;
+  margin: 0;
 }
